--- a/index.css
+++ b/index.css
@@ -3,6 +3,12 @@ html, body, main {
     height: 100%;
 }
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 main {
     display: flex;
     justify-content: center;
